[package]
name = "video-rss-core"
version = "0.1.0"
edition = "2021"
authors = ["ArietidsZ <zhongzhibozzb@gmail.com>"]
description = "Video RSS aggregator with AI transcription"
license = "Apache-2.0"

[lib]
name = "video_rss_core"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "monitor"
path = "src/bin/monitor.rs"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["rt-multi-thread", "time", "fs", "macros", "net", "sync", "signal"] }
tokio-uring = { version = "0.5", optional = true }
async-trait = "0.1"
futures = "0.3"

# HTTP client with connection pooling
reqwest = { version = "0.11", features = ["json", "cookies", "stream", "gzip", "brotli", "deflate", "trust-dns"] }

# Web framework - Axum with performance features
axum = { version = "0.7", features = ["ws", "multipart", "macros"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "fs", "trace", "compression-gzip", "compression-br", "timeout", "limit"] }

# RSS generation
rss = "2.0"
xml = "0.8"
quick-xml = "0.31"

# HTML parsing
scraper = "0.18"
select = "0.6"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
rmp-serde = "1.3"
flatbuffers = "24.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Performance and SIMD
rayon = "1.10"
crossbeam = "0.8"
parking_lot = "0.12"
dashmap = "6.1"
memmap2 = "0.9"
zerocopy = "0.8"
bytemuck = "1.19"
packed_simd_2 = { version = "0.3", optional = true }
wide = { version = "0.7", optional = true }

# Time and UUID
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }

# URL parsing
url = "2.4"

# Regex
regex = "1.10"

# Base64 encoding/decoding
base64 = "0.21"

# Environment variables
dotenv = "0.15"

# Process management
sysinfo = "0.30"

# Hashing and crypto
seahash = "4.1"
blake3 = "1.5"
ahash = "0.8"

# Cutting-edge ML frameworks
candle-core = { version = "0.7", features = ["cuda", "metal"] }
candle-nn = "0.7"
candle-transformers = "0.7"
candle-onnx = "0.7"
burn = { version = "0.15", features = ["wgpu", "fusion", "candle"] }
burn-wgpu = "0.15"
hf-hub = { version = "0.3", features = ["tokio"] }
tokenizers = { version = "0.20", features = ["http"] }

# Audio processing
hound = "3.5"
symphonia = { version = "0.5", features = ["mp3", "wav", "flac", "ogg", "aac"] }
rubato = "0.15"
cpal = "0.15"
dasp = "0.11"

# Array operations
ndarray = "0.15"


# Database
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite", "postgres", "chrono", "uuid", "json"], optional = true }

# Caching layers
redis = { version = "0.24", features = ["tokio-comp", "connection-manager", "ahash"], optional = true }
bb8 = { version = "0.8", optional = true }
bb8-redis = { version = "0.15", optional = true }
moka = { version = "0.12", features = ["future"] }
rocksdb = { version = "0.22", optional = true }
sled = { version = "0.34", optional = true }

# Circuit breaker and retry logic
tower-retry = "0.3"
backoff = { version = "0.4", features = ["tokio"] }

# Performance monitoring
prometheus = { version = "0.13", features = ["process"], optional = true }
metrics = { version = "0.21", optional = true }
metrics-exporter-prometheus = { version = "0.13", optional = true }
opentelemetry = { version = "0.26", features = ["trace", "metrics"], optional = true }
opentelemetry-otlp = { version = "0.26", optional = true }

# Semaphore for rate limiting
arc-swap = "1.7"
governor = "0.6"
nonzero_ext = "0.3"

# Vector database and search
lancedb = { version = "0.13", optional = true }
tantivy = { version = "0.22", optional = true }
arrow = { version = "54", features = ["prettyprint", "json"], optional = true }
lance = { version = "0.19", optional = true }

# Next-gen dependencies
nalgebra = "0.33"  # For quantum-inspired algorithms
automerge = "0.5"  # CRDT sync
wasmtime = { version = "25", features = ["component-model", "async"] }
wasmtime-wasi = "25"
rand = "0.8"

[features]
default = ["database", "redis", "metrics", "vector-db", "simd"]
database = ["sqlx"]
redis = ["dep:redis", "bb8", "bb8-redis"]
metrics = ["prometheus", "dep:metrics", "metrics-exporter-prometheus", "opentelemetry", "opentelemetry-otlp"]
vector-db = ["lancedb", "tantivy", "arrow", "lance"]
simd = ["packed_simd_2", "wide"]
io-uring = ["tokio-uring"]
persistent-cache = ["rocksdb", "sled"]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3