[package]
name = "backpressure-controller"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1.34", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.4", features = ["derive"] }
uuid = { version = "1.5", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "5.5"
futures-util = "0.3"

# Metrics and monitoring
prometheus = { version = "0.13", features = ["process"] }
metrics = "0.21"

# Circuit breaker
governor = "0.6"

# Async utilities
async-trait = "0.1"
tokio-util = { version = "0.7", features = ["time"] }

# Mathematical utilities for algorithms
statrs = "0.16"
ringbuffer = "0.15"

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "backpressure-controller"
path = "src/main.rs"