[package]
name = "event-pipeline"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1.47", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.5", features = ["derive", "env"] }
uuid = { version = "1.18", features = ["v4"] }
chrono = { version = "0.4.38", features = ["serde"] }
futures-util = "0.3"
dashmap = "6.1"
once_cell = "1.19"

# Kafka
rdkafka = { version = "0.36", features = ["cmake-build", "ssl", "sasl"] }

# Redis
redis = { version = "0.32", features = ["tokio-comp", "cluster-async"] }

# Metrics and monitoring
prometheus = { version = "0.13", features = ["process"] }
metrics = "0.21"
metrics-prometheus = "0.6"

# Async processing
async-trait = "0.1"
tokio-util = { version = "0.7", features = ["codec"] }

# Error handling and retries
backoff = "0.4"
exponential-backoff = "2.0"

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "event-pipeline"
path = "src/main.rs"