[package]
name = "webrtc-server"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1.34", features = ["full"] }
tokio-tungstenite = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.5", features = ["v4"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
futures-util = "0.3"
webrtc = "0.9"
bytes = "1.5"
dashmap = "5.5"
clap = { version = "4.4", features = ["derive"] }
env_logger = "0.10"
log = "0.4"
tower = "0.4"
tower-http = { version = "0.4", features = ["cors", "trace"] }
axum = { version = "0.7", features = ["ws"] }
hyper = "1.0"
tokio-util = { version = "0.7", features = ["codec"] }
rdkafka = { version = "0.36", features = ["cmake-build"] }
redis = { version = "0.24", features = ["tokio-comp", "cluster"] }

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "webrtc-server"
path = "src/main.rs"